VERIFIK 1.1