@@ -12,6 +12,14 @@ import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.Id;
 import javax.persistence.Table;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+
+import static org.apache.http.HttpHeaders.USER_AGENT;
 //import java.io.IOException;
 //import java.net.URI;
 //import java.net.URISyntaxException;
@@ -167,35 +175,62 @@ public class Vehiculo {
     String compro;
 
     public void obtenerDatosVehiculoVerifik(String token) {
-      /*  try {
-            HttpClient httpClient = HttpClient.newBuilder().version(HttpClient.Version.HTTP_2).build();
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(new URI("https://api.verifik.co/v2/co/runt/consultarVehiculoCompleto?plate=" + getPlaca()))
-                    .headers("Authorization", "jwt " + token)
-                    .GET().build();
+       try {
+           URL obj = new URL("https://api.verifik.co/v2/co/runt/consultarVehiculoCompleto?plate=" + getPlaca());
+           HttpURLConnection con = (HttpURLConnection) obj.openConnection();
+           con.setRequestMethod("GET");
+           con.setRequestProperty("User-Agent", USER_AGENT);
+           int responseCode = con.getResponseCode();
 
-            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
 
-            JSONObject json = new JSONObject(response.body());
-            setPlaca(String.valueOf(json.getJSONObject("data").get("plate")));
-            setTipo(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("tipoServicio")));
-            setClase(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("claseVehiculo")));
-            setIdClase(Integer.parseInt(json.getJSONObject("data").getJSONObject("vehicle").get("codClaseSise").toString()));
-            setMarca(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("marca")));
-            setModelo(Integer.parseInt(json.getJSONObject("data").getJSONObject("vehicle").get("modelo").toString()));
-            setLinea(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("linea")));
-            setCilindraje(Integer.parseInt(json.getJSONObject("data").getJSONObject("vehicle").get("cilindraje").toString()));
-            setColor(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("color")));
-            setNoserie(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("noSerie")));
-            setNomotor(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("noMotor")));
-            setNochasis(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("noChasis")));
-            setOcupantes(Integer.parseInt(json.getJSONObject("data").getJSONObject("vehicle").get("ocupantes").toString()));
-            setToneladas(Double.parseDouble(json.getJSONObject("data").getJSONObject("vehicle").get("toneladas").toString()));
 
-        } catch (JSONException | InterruptedException | URISyntaxException | IOException e) {
+           if (responseCode == HttpURLConnection.HTTP_OK) { // success
+               BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
+               String inputLine;
+               StringBuffer response = new StringBuffer();
+
+               while ((inputLine = in.readLine()) != null) {
+                   response.append(inputLine);
+               }
+               in.close();
+
+               System.out.println(response.toString());
+           } else {
+               System.out.println("GET request not worked");
+           }
+
+          // HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+           // JSONObject json = new JSONObject(response.body());
+          // setPlaca(String.valueOf(json.getJSONObject("data").get("plate")));
+          // setTipo(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("tipoServicio")));
+          // setClase(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("claseVehiculo")));
+          // setIdClase(Integer.parseInt(json.getJSONObject("data").getJSONObject("vehicle").get("codClaseSise").toString()));
+          // setMarca(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("marca")));
+          // setModelo(Integer.parseInt(json.getJSONObject("data").getJSONObject("vehicle").get("modelo").toString()));
+          // setLinea(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("linea")));
+          // setCilindraje(Integer.parseInt(json.getJSONObject("data").getJSONObject("vehicle").get("cilindraje").toString()));
+          // setColor(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("color")));
+          // setNoserie(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("noSerie")));
+          // setNomotor(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("noMotor")));
+          // setNochasis(String.valueOf(json.getJSONObject("data").getJSONObject("vehicle").get("noChasis")));
+          // setOcupantes(Integer.parseInt(json.getJSONObject("data").getJSONObject("vehicle").get("ocupantes").toString()));
+          // setToneladas(Double.parseDouble(json.getJSONObject("data").getJSONObject("vehicle").get("toneladas").toString()));
+
+        } catch ( IOException e) {
             throw new RuntimeException(e);
-        }*/
+        }
     }
+
+
+
+
+
+
+
+
+
+
+
 
 
 }
